--- a/style.css
+++ b/style.css
@@ -142,16 +142,20 @@ footer{
     height: 220px;
 }
 
+.rrss-logo{
+    display: flex;
+    justify-content: center;
+}
+
 .linkedin-logo{
     width: 50px;
     height: 50px;
-    margin-left: 870px;
 }
 
 .github-logo{
+    margin-left: 35px;
     width: 50px;
     height: 50px;
-    margin-left: 35px;
 }
 
 .copyright{
@@ -159,4 +163,157 @@ footer{
     text-align: center;
     color: white;
     font-size: 15px;
+}
+
+/* COMIENZO DE CSS PARA MOBILE*/
+/* COMIENZO DE CSS PARA MOBILE*/
+/* COMIENZO DE CSS PARA MOBILE*/
+/* COMIENZO DE CSS PARA MOBILE*/
+
+@media screen and (max-width:480px){
+
+    main{
+        width: 408px;
+        margin-left: 0%;
+        margin-top: 0%;        
+    }
+
+    .section-1, .section-2{
+        width: 200px;
+        margin-top: 50px;
+        margin-left: 0%;
+        border: solid 2px white;
+       
+    }
+
+    .advertencia{
+        display: flex;
+        color: white;
+        height: 20px;
+        justify-content: center;
+    }
+
+    .exclamacion-logo{
+        width: 10px;
+        height: 10px;
+        margin-right: 5px;
+    }
+    
+    .advertencia-texto{
+        margin-top: 0%;
+        font-size: 10px;
+    }
+
+    .encriptar{
+        width: 60px;
+        height: 20px;
+        background-color: #000000;
+        color: white;
+        padding: 3px 5px;
+        border-radius: 5px;
+        border: solid 2px #37b87b;
+        font-family:'Montserrat', sans-serif;
+        font-weight: bold;
+        text-align: center;
+        font-size: 5px;
+    }
+
+    .desencriptar{
+        width: 60px;
+        height: 20px;
+        background-color: #000000;
+        color: white;
+        padding: 3px 5px;
+        border-radius: 5px;
+        border: solid 2px #37b87b;
+        font-family:'Montserrat', sans-serif;
+        font-weight: bold;
+        text-align: center;
+        font-size: 5px;
+    }
+
+    .btn-copiar{
+        margin-left: 0%;
+    }
+
+    .copiar{
+        width: 60px;
+        height: 20px;
+        background-color: #000000;
+        color: white;
+        padding: 3px 5px;
+        border-radius: 5px;
+        border: solid 2px #37b87b;
+        font-family:'Montserrat', sans-serif;
+        font-weight: bold;
+        text-align: center;
+        font-size: 5px;
+    }
+
+    .input-texto{
+        width: 150px;
+        height: 150px;
+        margin-top: 0px;
+        margin-left: 20px;
+        font-size: 12px;        
+    }
+
+    .mensaje{
+        width: 150px;
+        height: 150px;
+        margin-top: 0px;
+        margin-left: 20px;
+        border: 2px solid #a2d2ff;
+        border-radius: 15px;
+        position: relative;
+        resize: none;    
+        background: none;
+        background-image: url("imagenes/inspector.png");
+        background-repeat: no-repeat;    
+        background-size: 50px;
+        font-family: 'Montserrat', sans-serif;
+        color: white;
+        font-weight: bold;
+        font-size: 12px;
+    }
+
+    .input-texto::placeholder{
+        line-height: 60px;
+        word-wrap: break-word;
+        text-align: center;
+        color: rgba(255, 255, 255, 0.747);
+        font-family:'Montserrat', sans-serif;
+        font-size: 10px;
+    }
+    
+    .mensaje::placeholder{
+        line-height: 150px;
+        text-align: center;
+        color: rgba(255, 255, 255, 0.747);
+        font-family:'Montserrat', sans-serif;
+        font-size: 9px;
+    }
+
+    .linkedin-logo{
+        width: 20px;
+        height: 20px;
+    }
+    
+    .github-logo{
+        margin-left: 15px;
+        width: 20px;
+        height: 20px;
+    }
+
+    .copyright{
+        text-align: center;
+        color: white;
+        font-size: 10px;
+    }
+
+    .swal-wide{
+        width: 80px;
+    }
+
+
 }
