--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("imagenes/cloud\ computing.jpg");
+    background-image: url("imagenes/cloud-computing.jpg");
 }
 
 .img-logo{
@@ -172,10 +172,14 @@ footer{
 
 @media screen and (max-width:480px){
 
+    body{
+        background-image: url("imagenes/background-mobile.png");
+    }
+
     main{
         width: 408px;
         margin-left: 0%;
-        margin-top: 0%;        
+        margin-top: 0%;               
     }
 
     .section-1, .section-2{
